fixed background gradient stretch

--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
   background: -moz-linear-gradient(top, #0a5790 10%, #0097e6 100%);
   background: -webkit-linear-gradient(top, #0a5790 10%, #0097e6 100%);
   background: linear-gradient(to bottom, #0a5790 10%, #0097e6 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: white;
   font-family: 'Source Sans Pro', sans-serif;
 }
